# spdmd

./: README.md  meson.build  meson_options.txt
config/: meson.build  spdmd.service.in  spdmd_config.h.in
include/: attester.hpp  doe_attester.hpp  mctp_attester.hpp  support.hpp
src/: attester.cpp  doe_attester.cpp  mctp_attester.cpp  spdmd.cpp  support.cpp
subprojects/libspdmdbus/: README.md  meson.build  meson_options.txt
subprojects/libspdmdbus/include/: certificate.hpp  component_integrity.hpp  trusted_component.hpp
subprojects/libspdmwrapper/: README.md  meson.build  meson_options.txt
subprojects/libspdmwrapper/include/: mctp_transport.h  pcie_doe.h  pcie_doe_transport.h  spdm_conn.h  spdm_conn_internal.h
subprojects/libspdmwrapper/tests/: meson.build
subprojects/libspdmwrapper/tests/transport/: doe_discovery.cpp
